--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,5 @@ commands:
   chestdrop:
     description: Drop a chest at a set of coords.
     aliases: [ dropchest ]
+  forceclaim:
+    description: Force a user to claim a drop code.
