Change to Gradle
We need Gradle for Oraxen to be at it's best.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: BowDrops
-version: '${project.version}'
+version: '${version}'
 main: com.bownet.drops.Main
 api-version: 1.19
 prefix: BowDrops
