Loads of changes!
Added a reload command, made the codes.yml work, fixed DroppedHolo bug, added a no perm message to force claim, fixed a reload error with Oraxen, and only allowed people to claim a drop once. Oh yeah, I also made it so forced redemptions don't count towards the player's claims to that code.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,5 @@ commands:
     aliases: [ dropchest ]
   forceclaim:
     description: Force a user to claim a drop code.
+  bowdrops:
+    description: Admin commands.
