--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 # Welcome to BowDrops!
 # Written by BowFun
+# Help with configuration: https://plugins.bownet.xyz/bowdrops/configuration
 
 # What should the plugin's message prefix be?
 Prefix: "&7[&3Bow&eDrops&7]"
